style.css
body {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    margin: 0;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

.container {
    flex: 1;
    display: flex;
}

.header-and-body-one {
    display: flex;
    flex-direction: column;
}

.header {
    display: flex;
    flex-direction: row;
    height: 70px;
    background: #1F2937;
    justify-content: space-between;
    align-items: center;
    padding: 0 150px;
}

.header-logo {
    display: flex;
    font-size: 24px;
    color: #F9FAF8;
}

.links {
    display: flex;
}

ul {
    display: flex;
    list-style-type: none;
    gap: 15px;
}

a {
    text-decoration: none;
    font-size: 18px;
    color: #E5E7EB;
}

.body-one {
    display: flex;
    background-color: #1F2937;
    justify-content: center;
    align-items: center;
    height: 400px;
    width: 100%;
    gap: 50px;
}

.left-box {
    display: flex;
    flex-direction: column;
    flex-basis: 30%;
    justify-content: center;
    height: 250px;
}

.header-body-one {
    font-size: 48px;
    color: #F9FAF8;
    font-weight: 800;
}

.left-box-text {
    font-size: 18px;
    color: #E5E7EB;
}

.button {
    border: none;
    border-radius: 8px;
    background: #3882F6;
    color: white;
    padding: 8px 24px;
    margin: 15px 0;
    width: 100px;
}

.right-box {
    display: flex;
    flex-direction: column;
    flex-basis: 30%;
    justify-content: center;
    align-items: center;
    background-color: #E5E7EB;
    height: 250px;
}

.right-box-text {

}

.body-two {

}

.body-three {

}

.body-four {

}

.footer {

}

